fixed stupid bootstrap overflow x thing. made copy of fix on github gist

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -485,6 +485,10 @@ body {
         border-bottom: 0;
     }
 }
+
+html, body {
+  overflow-x: hidden;
+}
 /* ng-view Fade effects, once ng-animate is in place.
 
 .fade {
